--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Eparati's homepage
+title: The Self-Heating Water Bottle - A Heavyweight Hydration Hero! 
 description: GitHub Pages example for promoting a project
 github_username: Eparati
 remote_theme: pages-themes/dinky@v0.2.0
